syntax="proto3";

package dto;

import "entity.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

//common--------------------------------------

message FetchRequest {
  optional int32 limit = 1;
  optional int32 offset = 2;
}

message DeleteRequest {
  optional int64 id = 1;
}

message DeleteMultipleRequest {
  repeated int64 ids = 1;
}

message SuccessAuthDto {
  optional string token = 1;
}